# tiny-ECDH-c

./: .gitignore  Makefile.am  ecdh.c
